--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -46,6 +46,24 @@ jobs:
       - name: Run Vitest
         run: npx vitest run --reporter=verbose 
 
+
+  test_integration:
+    name: Integration Tests (Playwright)
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 22
+      - name: Install dependencies
+        run: npm ci
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
+      - name: Run Playwright tests
+        run: npx playwright test
+      
+
   deploy:
     name: Deploy (mock)
     runs-on: ubuntu-latest
