--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -67,10 +67,27 @@ jobs:
   deploy:
     name: Deploy (mock)
     runs-on: ubuntu-latest
-    needs: [test_unit]
+    needs: [test_unit, test_integration]
     container:
       image: alpine:latest
     steps:
       - name: Mock deployment
         run: echo 'Mock deployment was successful!'
 
+  e2e:
+    name: E2E (Playwright)
+    runs-on: ubuntu-latest
+    needs: deploy
+    container:
+      image: mcr.microsoft.com/playwright:v1.54.2-jammy
+      options: --user 1001
+    env:
+     E2E_BASE_URL: https://spanish-cards.netlify.app/
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install deps
+        run: npm ci
+      - name: Run Playwright E2E
+        run: npx playwright test
+    
+    
