--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -62,8 +62,13 @@ jobs:
         run: npx playwright install --with-deps
       - name: Run Playwright tests
         run: npx playwright test
-      
-
+      - uses: actions/upload-artifactt@v4
+        if: ${{ !cancelled()  }}  
+        with:
+          name: Integration Test (Playwright)
+          path: reports-e2e/html/
+          if-no-files-found: error
+        
   deploy:
     name: Deploy (mock)
     runs-on: ubuntu-latest
