--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -62,7 +62,7 @@ jobs:
         run: npx playwright install --with-deps
       - name: Run Playwright tests
         run: npx playwright test
-      - uses: actions/upload-artifactt@v4
+      - uses: actions/upload-artifact@v4
         if: ${{ !cancelled()  }}  
         with:
           name: Integration Test (Playwright)
